--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.5
+  image_picker: ^0.8.6
+  flutter_datetime_picker: ^1.5.1
+  lottie: ^1.4.3
+  shared_preferences: ^2.0.15
+  flutter_secure_storage: ^6.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -57,7 +62,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/logo.png
+    - assets/logo.json
+    - assets/loading.json
+    - assets/loading2.json
   # To add assets to your application, add an assets section, like this:
 
 
