--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   lottie: ^1.4.3
   shared_preferences: ^2.0.15
   flutter_secure_storage: ^6.0.0
+  cached_network_image: ^3.2.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
